[tool.poetry]
name = "pycatan"
version = "0.2.0"
description = "A library for running games of The Settlers of Catan"
authors = ["Josef Waller <josef@siriusapplications.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flake8 = "^3.9.2"
black = "^21.7b0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
