[tool.poetry]
name = "pycatan"
version = "1.0.0"
description = "A library for running games of The Settlers of Catan"
authors = ["Josef Waller <josef@siriusapplications.com>"]

[tool.poetry.dependencies]
python = "^3.8"
colored = "^1.4.2"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
black = "^21.7b0"
coverage = {extras = ["toml"], version = "^5.5"}
pytest-snapshot = "^0.6.1"
sphinx-rtd-theme = "^0.5.2"
pytest-cov = "^2.12.1"
pytest = "^6.2.4"
flake8-docstrings = "^1.6.0"
sphinx-autodoc-typehints = "^1.12.0"

[tool.coverage.paths]
source = ["src"]

[tool.coverage.run]
branch = true
source = ["pycatan"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
